# compute-fhe

./: .gitignore  AEGateLogic.cpp  AEGateLogic.h  AEOptimized.cpp  AEOptimized.h  BaseAESimulator.cpp  BaseAESimulator.h  BaseArithmeticsEngine.cpp  BaseArithmeticsEngine.h  BaseSimulator.cpp  BaseSimulator.h  CFHETypes.h  CFHE_AE_Test.cpp  CFHE_Echar.cpp  CFHE_Echar.h  CFHE_Eint.cpp  CFHE_Eint.h  CFHE_Test.cpp  CFHE_Test.h  CFHE_TestTypes.h  CMakeLists.txt  ComputeFHE.cpp  ComputeFHE.h  Doxyfile  LICENSE  README.md  SimConstants.h  SimGateLogic.cpp  SimGateLogic.h  SimOptimized.cpp  SimOptimized.h  SimTest.h  main.cpp
.github/: doxygen.yml
.github/workflows/: doxygen.yml
app/: basic_sort.cpp  main.cpp
cmake/: cmake_uninstall.cmake.in  computefheConfig.cmake.in
docker/: Dockerfile
docker/compute-fhe/: Dockerfile
docker/compute-fhe-hexl/: Dockerfile
docs/: Doxyfile  mainpage.dox
examples/: basic_sort.cpp  devtest.cpp  int_sqrt.cpp  matrix.cpp  quickstart.cpp  sort.cpp  strings.cpp
include/computefhe/: AEGateLogic.h  AEOptimized.h  ALUGateLogic.h  ALUOptimized.h  ALUStandard.h  BaseAESimulator.h  BaseALU.h  BaseALUSimulator.h  BaseArithmeticsEngine.h  CFHETypes.h  CFHE_Echar.h  CFHE_Eint.h  CFHE_FixedPoint.h  CFHE_Integer.h  CFHE_int.h  ComputeFHE.h  ConditionManager.h  Efixedpoint.h  Einteger.h  Evector.h  FixedPoint.h  SimConstants.h  SimGateLogic.h  SimOptimized.h  SimStandard.h
src/core/: AEGateLogic.cpp  AEOptimized.cpp  ALUGateLogic.cpp  ALUOptimized.cpp  ALUStandard.cpp  BaseALU.cpp  BaseArithmeticsEngine.cpp  ComputeFHE.cpp  FixedPoint.cpp
src/cpputils/: CFHE_FixedPoint.cpp  CFHE_Integer.cpp  ConditionManager.cpp  Efixedpoint.cpp  Einteger.cpp  Evector.cpp
src/examples/: devtest.cpp  div_mod_bs.cpp  fixedpoint.cpp  fp_conversion.cpp  int_sqrt.cpp  matrix.cpp  sort.cpp  strings.cpp
src/include/computefhe/: BaseALU.h  BaseALUSimulator.h  CFHETypes.h  Efixedpoint.h  Einteger.h  Evector.h  SimStandard.h
src/simulator/: BaseAESimulator.cpp  BaseALUSimulator.cpp  SimGateLogic.cpp  SimOptimized.cpp  SimStandard.cpp
src/tests/: CFHE_Test.cpp
src/tests/include/: CFHE_TestTypes.h
src/wrappers/: CFHE_Eint.cpp  CFHE_Integer.cpp  CFHE_int.cpp
tests/: CFHE_AE_Test.cpp  CFHE_ALU_Test.cpp  CFHE_Test.cpp  test.cpp
tests/include/: CFHE_Test.h  CFHE_TestTypes.h  SimTest.h
